--- a/005.html
+++ b/005.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">河北省</span>:顺源达建材---G107---东马庄收费站---G2516东吕高速---冀鲁界：<br><hr><span id="pro">山东省</span>: 鲁冀界---G2516东吕高速---G20青银高速---齐河北立交---G3京台高速---国际医学中心收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">河北省</span>:顺源达建材---G107---东马庄收费站---G2516东吕高速---冀鲁界：<br><hr><span id="pro">山东省</span>: 鲁冀界---G2516东吕高速---G20青银高速---齐河北立交---G3京台高速---G35济广高速---天桥收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
