--- a/006.html
+++ b/006.html
@@ -77,13 +77,13 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002023051300342</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，江西省</div></li>
+				<div class="detail-value " id="passDists">广东省，湖南省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2023年05月13日 12时04分至 2023年05月30日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
-                    <div class="detail-value " id="passCount">单次</div></li>    
+                    <div class="detail-value " id="passCount">多次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材---G107---芙蓉收费站---G86深圳外环高速---G94珠三角环线高速---塘厦立交---S22惠塘高速---G0422武深高速---G45大广高速---粤赣界<br><hr><span id="pro">江西省</span>:赣粤界---G45大广高速---南桥西收费站 (多 次 往 返)<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材---滨海湾长安收费站---S3广深沿江高速--G0425广澳高速---G4京港澳高速---G45大广高速---S1广连高速---G0423乐广高速---G4京港澳高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G4京港澳高速---宜章收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>江西省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>湖南省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
