--- a/006.html
+++ b/006.html
@@ -77,13 +77,13 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002023053000342</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广西省，湖南省</div></li>
+				<div class="detail-value " id="passDists">广西壮族自治区，湖南省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2023年05月30日 12时04分至 2023年06月30日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广西省</span>:顺源达建材---G242---久隆收费站---S43六钦高速—G72泉南高速---G65包茂高速---G72泉南高速---桂湘界<br><hr><span id="pro">湖南省</span>:湘桂界---G72泉南高速---永州收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广西壮族自治区</span>:顺源达建材---G242---久隆收费站---S43六钦高速—G72泉南高速---G65包茂高速---G72泉南高速---桂湘界<br><hr><span id="pro">湖南省</span>:湘桂界---G72泉南高速---永州收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -122,7 +122,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
                     <div class="detail-value " id="totalOutline">24.00 × 3.75× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
-                    <div class="detail-value " id="axlesLoad">10+20+20</div></li>
+                    <div class="detail-value " id="axlesLoad">10+10+30</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class=" detail-name-blod">车货总体轮廓图：</div>
                     <div class="detail-image detail-value" id="totalImgs">无</div></li>
                 
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>广西省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>湖南省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>广西壮族自治区：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>湖南省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
