--- a/004.html
+++ b/004.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">多次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材---环城北路---石碣收费站---G94珠三角环线高速---杨荷立交---G45大广高速---山前立交---S1广连高速---英南立交---G0423乐广高速---刘屋互通---G6011南韶高速---丹霞立交---G0422武深高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G0422武深高速---田庄收费站（往返运输）<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材---G355---从化收费站---G45大广高速---永兴立交---G0422武深高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G0422武深高速---田庄收费站（往返运输）<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -96,7 +96,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">打桩机</div></li>
+                    <div class="detail-value " id="cargoInfo">旋挖机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">64.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
